--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       {{ content }}
 
       <footer class="site-footer">
-          <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+          <a href="{{ site.github.repository_url }}">View on GitHub</a>
       </footer>
     </main>
   </body>
