--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,8 @@
 
 <div class="py-5 border-top">
   <div class="container">
-
     <p class="h5 mb-3">{{ site.title | escape }}</p>
-
     <div class="row">
-
       <div class="col-sm">
         <ul class="list-unstyled">
           <li>
@@ -24,17 +21,9 @@
           {%- endif -%}
         </ul>
       </div>
-
-
       <div class="col-sm text-right">
-        <p>{{- site.description | escape -}}</p>
-
-        <p>
-          <a href="https://nicolas-van.github.io/bootstrap-4-github-pages/">Powered by Bootstrap 4 Github Pages</a>
-        </p>
+        <p><a href="github.com/pe5er/gw3uws_website">View on Github</a></p>
       </div>
-
     </div>
-
   </div>
 </div>
