--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -42,7 +42,7 @@ $green:   #56CC9D !default;
 $teal:    #20c997 !default;
 $cyan:    #6CC3D5 !default;
 
-$primary:       #343a40 !default; //Swansea Radio Society Green
+$primary:       #343a40 !default; //Bootstrap Grey
 $secondary:     #F3969A !default;
 $success:       $green !default;
 $info:          $cyan !default;
