--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,6 @@
+<div class="header jumbotron text-center">
+</div>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
     <a class="navbar-brand" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
