--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
  <title>GW3UWS</title>
+ <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/ktoGxQZ.png"/>
  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
