--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="jumbotron text-center" style="margin-bottom:0">
   <a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-  <p><a href="github.com/pe5er/gw3uws_website">View on Github</a></p>
+  <p><a href="https://www.github.com/pe5er/gw3uws_website">View on Github</a></p>
   </div>
 </footer>
