--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="header jumbotron text-center">
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-dark navbar-background">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     {%- assign page_paths = site.header_pages -%}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
