--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@
 @import "bootstrap_customization";
 
 //colours
-$navbar-background: #343a40 !default;
+$bg-dark: #343a40 !default;
 
 html {
   position: relative;
