--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,6 +19,10 @@ body {
  margin-bottom: 60px; /* Margin bottom by footer height */
 }
 
+.navbar {
+	background-color: #343a40;	
+}
+
 .header {
  margin-bottom:0;
  margin-top:0;
