--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,6 +23,14 @@ body {
 	background-color: #343a40;	
 }
 
+.navbar-default {
+	background-color: #343a40;	
+}
+
+.navbar-dark {
+	background-color: #343a40;	
+}
+
 .header {
  margin-bottom:0;
  margin-top:0;
