--- a/assets/main.scss
+++ b/assets/main.scss
@@ -31,6 +31,10 @@ body {
 	background-color: #343a40;	
 }
 
+.navbar-custom {
+	background-color: #343a40;	
+}
+
 .header {
  margin-bottom:0;
  margin-top:0;
