--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,3 +4,11 @@
   <p><a href="https://www.github.com/pe5er/gw3uws_website">View on Github</a></p>
   </div>
 </footer>
+
+<script language="javascript"> //highlights current page in navbar
+$(document).ready(function() {
+        
+        var pathname = window.location.pathname;
+        $('.navbar-nav > li > a[href="'+pathname+'"]').parent().addClass('active');
+})
+</script>
