--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,5 +10,6 @@ $(document).ready(function() {
         
         var pathname = window.location.pathname;
         $('.navbar-nav > li > a[href="'+pathname+'"]').parent().addClass('active');
+        echo pathname;
 })
 </script>
