--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,8 +15,8 @@
           Licence Courses
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/licences/foundation">Foundation</a>
-	    <a class="dropdown-item" href="/licences/intermediate">Intermediate</a>
+            <a class="dropdown-item" href="licences/foundation">Foundation</a>
+	    <a class="dropdown-item" href="licences/intermediate">Intermediate</a>
 	  </div>
         </li> 
         {%- for path in page_paths -%}
