--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
+	<li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>      
 	<li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Licence Courses
@@ -17,6 +20,14 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="licences/foundation">Foundation</a>
 	    <a class="dropdown-item" href="licences/intermediate">Intermediate</a>
+	  </div>
+        </li> 
+	<li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Documents
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="documents/constitution">Constitution</a>
 	  </div>
         </li> 
         {%- for path in page_paths -%}
