--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
           Licence Courses
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="licences/foundation">Foundation</a>
+            <a class="dropdown-item" href="/gw3uws_website/licences/foundation">Foundation</a>
 	    <a class="dropdown-item" href="licences/intermediate">Intermediate</a>
 	  </div>
         </li> 
