--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
 	<li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/gw3uws_website/">Home</a>
         </li>      
 	<li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
