--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="/gw3uws_website/licences/foundation">Foundation</a>
-	    <a class="dropdown-item" href="licences/intermediate">Intermediate</a>
+	    <a class="dropdown-item" href="/gw3uws_website/licences/intermediate">Intermediate</a>
 	  </div>
         </li> 
 	<li class="nav-item dropdown">
@@ -27,7 +27,7 @@
           Documents
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="documents/constitution">Constitution</a>
+            <a class="dropdown-item" href="/gw3uws_website/documents/constitution">Constitution</a>
 	  </div>
         </li> 
         {%- for path in page_paths -%}
