--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,15 +11,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
 	<li class="nav-item">
-          <a class="nav-link" href="/gw3uws_website/">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>      
 	<li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Licence Courses
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/gw3uws_website/licences/foundation">Foundation</a>
-	    <a class="dropdown-item" href="/gw3uws_website/licences/intermediate">Intermediate</a>
+            <a class="dropdown-item" href="/licences/foundation">Foundation</a>
+	    <a class="dropdown-item" href="/licences/intermediate">Intermediate</a>
 	  </div>
         </li> 
 	<li class="nav-item dropdown">
@@ -27,7 +27,7 @@
           Documents
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/gw3uws_website/documents/constitution">Constitution</a>
+            <a class="dropdown-item" href="/documents/constitution">Constitution</a>
 	  </div>
         </li> 
         {%- for path in page_paths -%}
